:construction: Update jobs hook